--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lliurex-smart (0.10.31) bionic; urgency=medium
+
+  * Initial release for bionic
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 09 Jan 2019 08:50:50 +0100
+
 lliurex-smart (0.10.21) xenial; urgency=high
 
   * Adding upgrade option, even if it does nothing
